<resources>
    <string name="app_name">mapstew</string>

    <string name="uri_style_rudymap" translatable="false">https://raw.githubusercontent.com/typebrook/mapstew/master/styles/rudymap.json</string>
    <string name="res_desc_cross" translatable="false">A simple cross marks map center</string>
    <string name="map_btn_zoom_in" translatable="false">"Zoom in"</string>
    <string name="map_btn_zoom_out" translatable="false">"Zoom out"</string>
    <string name="map_btn_locating" translatable="false">"Locating user"</string>
    <string name="map_btn_layers" translatable="false">"Configure layers"</string>

    <string name="dialog_coord_input_desc">Coordinate of map center</string>
    <string name="action_offline_maps">Offline Maps</string>
    <string name="action_upload_surveys">Upload surveys</string>
    <string name="action_introduction">Intro</string>
    <string name="action_settings">Settings</string>
    <string-array name="coord_expr">
        <item>Degree</item>
        <item>DegMin</item>
        <item>DMS</item>
    </string-array>
    <string-array name="longitude_EW">
        <item>E</item>
        <item>W</item>
    </string-array>
    <string-array name="latitude_NS">
        <item>N</item>
        <item>S</item>
    </string-array>
    <string name="degree">°</string>
    <string name="minute">\'</string>
    <string name="second">\'\'</string>
    <string name="dialog_xyinput_x">X: </string>
    <string name="dialog_xyinput_y">Y: </string>
    <string name="coordinate_reference_system">Coord System:</string>
    <string name="expression">Expression:</string>
    <string name="displayGrid">Display Grid:</string>
    <string name="in_use">In Use</string>
    <string name="out_of_boundary">Out of Boundary</string>
    <string name="pref_feature_details" translatable="false">debug_features</string>
    <string name="number_features">%s items</string>
    <string name="map_btn_create_survey">Add a new survey</string>
    <string name="take_photo">Take Photo</string>
    <string name="file_provider_name" translatable="false">.fileProvider</string>
    <string name="select_capture_image">select picture</string>
    <string name="placeholder_bottomsheet_title" translatable="false">title</string>
    <string name="placeholder_path">unnamed path</string>
    <string name="hint_take_photo">Please take a photo</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="quest_leave_new_note_photo_delete_title">Do you want to delete this picture?</string>
    <string name="quest_leave_new_note_photos_are_useful">Adding a photo will make the note much more useful.</string>
    <string name="quest_leave_new_note_photo">新增照片</string>
    <string name="no_camera_app">No APP to launch camera</string>
    <string name="quest_leave_new_note_create_image_error">Unable to create file for photo</string>
</resources>
