<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input_degree_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <Spinner
        android:id="@+id/spinner_ew"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:entries="@array/longitude_EW" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/longitudeDeg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:autofillHints=""
            android:gravity="center_horizontal"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/degree" />

        <EditText
            android:id="@+id/longitude_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="2"
            android:autofillHints=""
            android:gravity="center_horizontal"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minute" />

        <EditText
            android:id="@+id/longitude_sec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="4"
            android:autofillHints=""
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_ns"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:entries="@array/latitude_NS" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/latitude_deg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:autofillHints=""
            android:gravity="center_horizontal"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/degree" />

        <EditText
            android:id="@+id/latitude_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="2"
            android:autofillHints=""
            android:gravity="center_horizontal"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minute" />

        <EditText
            android:id="@+id/latitude_sec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="4"
            android:autofillHints=""
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second" />
    </LinearLayout>
</LinearLayout>